x86/intmath.h: Fix mull operand constraints

Fixes Ticket1466

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>